agregacion de formulario

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>titulo</h1>
+
+    <form action=""></form>
+    <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dicta quidem saepe. Impedit explicabo quae similique veritatis at nulla quos officia distinctio nisi quas quam, dolore, incidunt soluta molestias. Assumenda?</section>
 </body>
 </html>
